# fastapi-mongo-admin

./: .gitignore  .mypy.ini  .pytest.ini  .ruff.toml  docker-compose.yaml  pyproject.toml
src/app/: example.py
src/app/application/: change_tracker.py  developer_repo.py  user_repo.py
src/app/application/exceptions/: base.py
src/app/application/interactors/: create_user.py  get_user.py  update_user.py  update_users.py
src/app/application/interactors/admin/: count_users.py  create_user_admin.py  delete_users_admin.py  get_user_by_id.py  get_users.py  get_users_by_ids.py  update_user_admin.py
src/app/application/interactors/developer/: create_developer.py  delete_developer.py  get_developer.py  get_developers.py  update_developer.py
src/app/application/interactors/user/: create_user.py
src/app/bootstrap/: configs.py
src/app/bootstrap/entrypoints/: api.py
src/app/bootstrap/ioc/: application.py  config.py  containers.py  infrastructure.py
src/app/domain/: course.py  developer.py  model.py
src/app/domain/common/: exceptions.py
src/app/infrastructure/db/: change_tracker.py  developer_repo.py  generic_mongo_repository.py  query_builder.py  user_repo.py
src/app/infrastructure/log/: main.py
src/app/infrastructure/trackers/: mongo_session.py
src/app/presentation/: exceptions.py
src/app/presentation/admin/: generic_mongo_view.py  lessons_list_field.py  mongo_course_view.py  mongo_view.py
src/app/presentation/api/: root.py
src/app/presentation/api/developer/: router.py  schema.py
tests/: test_mongo_session.py  test_session.py
(+5 files in other folders)
